[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://animations/HUD/PauseInfoFade.tres" type="Animation" id=3]
[ext_resource path="res://scenes/HUD/PausePopup.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HUD_Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD_Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -169.5
margin_right = 169.5
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="HUD_Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 2 )
text = "| |"

[node name="GameOver" type="PopupDialog" parent="HUD_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -165.0
margin_right = 200.0
margin_bottom = 190.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD_Container/GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -164.0
margin_top = 15.0
margin_right = 164.0
margin_bottom = 95.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton" type="Button" parent="HUD_Container/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -96.0
margin_right = 76.5
margin_bottom = -24.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Back To Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="HUD_Container/GameOver"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -76.5
margin_top = -176.0
margin_right = 76.5
margin_bottom = -104.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Retry"

[node name="HighScoreLabel" type="Label" parent="HUD_Container/GameOver"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 85.0
margin_right = 200.0
margin_bottom = 125.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "High Score: 0"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePopup" type="PopupDialog" parent="HUD_Container"]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD_Container/PausePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_top = 10.0
margin_right = 117.0
margin_bottom = 90.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "Paused"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyLabel" type="Label" parent="HUD_Container/PausePopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 120.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "Difficulty: Normal"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="HUD_Container/PausePopup"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 120.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "High Score: 0"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="HUD_Container/PausePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -123.5
margin_top = -260.0
margin_right = 123.5
margin_bottom = -193.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleButton2" type="Button" parent="HUD_Container/PausePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -100.0
margin_right = 180.0
margin_bottom = -28.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "Quit To Title"

[node name="SettingsButton" type="Button" parent="HUD_Container/PausePopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.5
margin_top = -180.0
margin_right = 136.5
margin_bottom = -113.0
custom_fonts/font = SubResource( 6 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD_Container/PausePopup"]
anims/PauseInfoFade = ExtResource( 3 )

[node name="InfoFadeTimer" type="Timer" parent="HUD_Container/PausePopup"]
wait_time = 2.0

[connection signal="pressed" from="HUD_Container/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="HUD_Container/GameOver/TitleButton" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="HUD_Container/GameOver/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="HUD_Container/PausePopup/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="HUD_Container/PausePopup/TitleButton2" to="." method="_on_TitleButton_pressed"]
[connection signal="pressed" from="HUD_Container/PausePopup/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="timeout" from="HUD_Container/PausePopup/InfoFadeTimer" to="HUD_Container/PausePopup" method="_on_InfoFadeTimer_timeout"]
